<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="fragments.NewAppointmentFragment">

        <TextView
            android:id="@+id/textview_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_appointment_fragment"
            android:textAlignment="center"
            android:textSize="16dp" />

        <!-- Biometrics -->
        <TextView
            android:id="@+id/lblBiometrics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textview_second"
            android:text="@string/lblBiometrics" />

        <TextView
            android:id="@+id/lblBiometric01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometrics"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric01" />

        <EditText
            android:id="@+id/biometric01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometrics"
            android:layout_toRightOf="@+id/lblBiometric01"
            android:layout_alignBaseline="@+id/lblBiometric01" />

        <TextView
            android:id="@+id/lblBiometric02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometric01"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric02" />

        <EditText
            android:id="@+id/biometric02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometric01"
            android:layout_toRightOf="@+id/lblBiometric02"
            android:layout_alignBaseline="@+id/lblBiometric02" />

        <TextView
            android:id="@+id/lblBiometric03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometric02"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric03" />

        <EditText
            android:id="@+id/biometric03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometric02"
            android:layout_toRightOf="@+id/lblBiometric03"
            android:layout_alignBaseline="@+id/lblBiometric03" />

        <TextView
            android:id="@+id/lblBiometric04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometric03"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric04" />

        <EditText
            android:id="@+id/biometric04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometric03"
            android:layout_toRightOf="@+id/lblBiometric04"
            android:layout_alignBaseline="@+id/lblBiometric04" />

        <TextView
            android:id="@+id/lblBiometric05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometric04"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric05" />

        <EditText
            android:id="@+id/biometric05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometric04"
            android:layout_toRightOf="@+id/lblBiometric05"
            android:layout_alignBaseline="@+id/lblBiometric05" />

        <TextView
            android:id="@+id/lblBiometric06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblBiometric05"
            android:layout_marginVertical="5dp"
            android:text="@string/biometric06" />

        <EditText
            android:id="@+id/biometric06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number"
            android:layout_below="@+id/lblBiometric05"
            android:layout_toRightOf="@+id/lblBiometric06"
            android:layout_alignBaseline="@+id/lblBiometric06" />

        <!-- Symptoms -->
        <TextView
            android:id="@+id/lblSymptoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/biometric06"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/lblSymptoms" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblSymptoms"
            android:text="@string/symptom01" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch01"
            android:text="@string/symptom02" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch02"
            android:text="@string/symptom03" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch03"
            android:text="@string/symptom04" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch04"
            android:text="@string/symptom05" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch05"
            android:text="@string/symptom06" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch06"
            android:text="@string/symptom07" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch07"
            android:text="@string/symptom08" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch08"
            android:text="@string/symptom09" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch09"
            android:text="@string/symptom10" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch10"
            android:text="@string/symptom11" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch11"
            android:text="@string/symptom12" />

        <Button
            android:id="@+id/btnSubmitSurvey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/switch12"
            android:layout_alignParentRight="true"
            android:layout_margin="18dp"
            android:text="Submit" />


    </RelativeLayout>
</ScrollView>